@@ -7,21 +7,24 @@ import me.retucio.sputnik.module.ModuleManager;
 import me.retucio.sputnik.module.modules.client.HUD;
 import me.retucio.sputnik.ui.widgets.frames.settings.ClientSettingsFrame;
 import me.retucio.sputnik.util.Colors;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.gui.Click;
-import net.minecraft.client.gui.DrawContext;
-import net.minecraft.client.gui.screen.Screen;
-import net.minecraft.text.Text;
+import me.retucio.sputnik.util.KeyUtil;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.GuiGraphicsExtractor;
+import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.input.MouseButtonEvent;
+import net.minecraft.network.chat.Component;
 import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.NonNull;
 import org.lwjgl.glfw.GLFW;
 
 import java.util.ArrayList;
 import java.util.List;
 
+
 public class HudEditorScreen extends Screen {
 
     public static HudEditorScreen INSTANCE;
-    private final MinecraftClient mc = MinecraftClient.getInstance();
+    private final Minecraft mc = Minecraft.getInstance();
     private final HUD hud = ModuleManager.INSTANCE.getModuleByClass(HUD.class);
 
     private final List<HudElement> elements = new ArrayList<>();
@@ -31,7 +34,7 @@ public class HudEditorScreen extends Screen {
     private int dragX, dragY;
 
     public HudEditorScreen() {
-        super(Text.literal("editor del HUD"));
+        super(Component.literal("editor del HUD"));
         Sputnik.EVENT_BUS.subscribe(this);
     }
 
@@ -41,34 +44,34 @@ public class HudEditorScreen extends Screen {
     }
 
     @Override
-    public void render(DrawContext ctx, int mouseX, int mouseY, float delta) {
-        ctx.fill(0, 0, this.width, this.height, Colors.hudEditorScreenBackgroundColor.getRGB());
+    public void extractRenderState(GuiGraphicsExtractor gui, int mouseX, int mouseY, float delta) {
+        gui.fill(0, 0, this.width, this.height, Colors.hudEditorScreenBackgroundColor.getRGB());
 
         // instrucciones
-        ctx.drawCenteredTextWithShadow(mc.textRenderer, title,
-                this.width / 2, this.height / 2 - mc.textRenderer.fontHeight, -1);
-        ctx.drawCenteredTextWithShadow(mc.textRenderer,
-                Text.literal("arrastrar para mover · clic derecho para visibilidad · ESC para guardar y salir · shift + clic derecho para restablecer"),
-                this.width / 2, this.height / 2 + mc.textRenderer.fontHeight, Colors.instructionsTextColor.getRGB());
+        gui.centeredText(mc.font, title, this.width / 2, this.height / 2 - mc.font.lineHeight, -1);
+        gui.centeredText(mc.font,
+                Component.literal("arrastrar para mover · clic derecho para visibilidad · ESC para guardar y salir · shift + clic derecho para restablecer"),
+                this.width / 2, this.height / 2 + mc.font.lineHeight, Colors.instructionsTextColor.getRGB());
 
         // movimiento axial
         if (hud.axialMovement.getValue()) {
-            int centerX = mc.getWindow().getScaledWidth() / 2;
+            int centerX = mc.getWindow().getGuiScaledWidth() / 2;
             if (dragging && selected != null && Math.abs(centerX - mouseX) < hud.axisOffset.getValue()) {
                 dragX = mouseX - centerX + selected.getW() / 2;
-                ctx.drawVerticalLine(centerX, 0, mc.getWindow().getScaledHeight(), Colors.CELESTE.getRGB());
+                gui.verticalLine(centerX, 0, mc.getWindow().getGuiScaledHeight(), Colors.CELESTE.getRGB());
             }
 
-            int centerY = mc.getWindow().getScaledHeight() / 2;
+            int centerY = mc.getWindow().getGuiScaledHeight() / 2;
             if (dragging && selected != null && Math.abs(centerY - mouseY) < hud.axisOffset.getValue()) {
                 dragY = mouseY - centerY + selected.getH() / 2;
-                ctx.drawHorizontalLine(0, mc.getWindow().getScaledWidth(), centerY, Colors.CELESTE.getRGB());
+                gui.horizontalLine(0, mc.getWindow().getGuiScaledWidth(), centerY, Colors.CELESTE.getRGB());
             }
         }
 
         // elementos
-        for (HudElement element : elements)
-            element.renderInEditor(ctx, hud);
+        for (HudElement element : elements) {
+            element.renderInEditor(gui, hud);
+        }
 
         // tooltips
         if (!dragging) {
@@ -76,19 +79,19 @@ public class HudEditorScreen extends Screen {
                 if (!element.isVisible()) continue;
 
                 if (element.isHovered(mouseX, mouseY)) {
-                    List<Text> tooltip = element.getTooltip();
+                    List<Component> tooltip = element.getTooltip();
                     if (!tooltip.isEmpty())
-                        ctx.drawTooltip(mc.textRenderer, tooltip, mouseX + 7, mouseY + 20);
+                        gui.setComponentTooltipForNextFrame(mc.font, tooltip, mouseX + 7, mouseY + 20);
                     break;
                 }
             }
         }
 
-        super.render(ctx, mouseX, mouseY, delta);
+        super.extractRenderState(gui, mouseX, mouseY, delta);
     }
 
     @Override
-    public boolean mouseClicked(Click click, boolean doubled) {
+    public boolean mouseClicked(@NonNull MouseButtonEvent click, boolean doubled) {
         int mouseX = (int) click.x();
         int mouseY = (int) click.y();
 
@@ -106,7 +109,7 @@ public class HudEditorScreen extends Screen {
                     return true;
 
                 } else if (click.button() == 1) {
-                    if (mc.isShiftPressed()) {
+                    if (KeyUtil.isShiftDown()) {
                         selected.resetPosition();
                     } else {
                         selected.setVisible(!selected.isVisible());
@@ -121,7 +124,7 @@ public class HudEditorScreen extends Screen {
     }
 
     @Override
-    public boolean mouseDragged(Click click, double deltaX, double deltaY) {
+    public boolean mouseDragged(@NonNull MouseButtonEvent click, double deltaX, double deltaY) {
         if (!dragging || selected == null || click.button() != 0)
             return super.mouseDragged(click, deltaX, deltaY);
 
@@ -131,15 +134,15 @@ public class HudEditorScreen extends Screen {
         int newX = mouseX - dragX;
         int newY = mouseY - dragY;
 
-        newX = Math.max(1, Math.min(newX, width - selected.getW() - 1));
-        newY = Math.max(1, Math.min(newY, height - selected.getH() - 1));
+        newX = Math.clamp(newX, 1, width - selected.getW() - 1);
+        newY = Math.clamp(newY, 1, height - selected.getH() - 1);
 
         selected.setPosition(newX, newY);
         return true;
     }
 
     @Override
-    public boolean mouseReleased(Click click) {
+    public boolean mouseReleased(@NonNull MouseButtonEvent click) {
         if (dragging && click.button() == 0) {
             dragging = false;
             if (selected != null)
@@ -154,7 +157,7 @@ public class HudEditorScreen extends Screen {
     // he sustituído el método del súper por un evento para ver si así se podían
     // registrar dos teclas a la vez, pero resulta que no :P
     public void onKey(KeyEvent event) {
-        if (!(mc.currentScreen == INSTANCE)) return;
+        if (!(mc.screen == INSTANCE)) return;
         if (event.getAction() == GLFW.GLFW_RELEASE) return;
         event.cancel();
 
@@ -171,13 +174,13 @@ public class HudEditorScreen extends Screen {
                 selected.setY(Math.max(1, selected.getY() - offset));
             }
             if (event.getKey() == GLFW.GLFW_KEY_DOWN) {
-                selected.setY(Math.min(mc.getWindow().getScaledHeight() - selected.getH() + 1, selected.getY() + offset));
+                selected.setY(Math.min(mc.getWindow().getGuiScaledHeight() - selected.getH() + 1, selected.getY() + offset));
             }
             if (event.getKey() == GLFW.GLFW_KEY_LEFT) {
                 selected.setX(Math.max(1, selected.getX() - offset));
             }
             if (event.getKey() == GLFW.GLFW_KEY_RIGHT) {
-                selected.setX(Math.min(mc.getWindow().getScaledWidth() - selected.getW() + 1, selected.getX() + offset));
+                selected.setX(Math.min(mc.getWindow().getGuiScaledWidth() - selected.getW() + 1, selected.getX() + offset));
             }
         }
     }
@@ -195,9 +198,9 @@ public class HudEditorScreen extends Screen {
     }
 
     @Override
-    protected void applyBlur(DrawContext ctx) {
+    protected void extractBlurredBackground(@NonNull GuiGraphicsExtractor gui) {
         if (ClientSettingsFrame.guiSettings.blur.getValue()) {
-            super.applyBlur(ctx);
+            super.extractBlurredBackground(gui);
         }
     }
 
